chore: Update animejs

--- a/docs-site/layouts/partials/custom/head-end.html
+++ b/docs-site/layouts/partials/custom/head-end.html
@@ -5,7 +5,7 @@
 
 {{/* Load AnimeJS for network animation on landing page */}}
 {{ if .IsHome }}
-<script src="https://cdn.jsdelivr.net/npm/animejs@4.3.5/lib/anime.min.js" integrity="sha384-EjiE/2cohA+NrIcthA3J/IrlvVYkoPZfJNgOnR15AHAoFHBht0umk1OmRhtjt1SL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/animejs@4.3.5/dist/bundles/anime.umd.min.js" integrity="sha384-GVTCcSfjdlQel2+BTqNPdndqoUSx/+aK372m+xenBPNnXxbI9B4Q3TzuNYYQH9+/" crossorigin="anonymous"></script>
 <script>
   (function() {
     if (typeof anime === 'undefined') {
